--- a/source/less/blocks/tariff.less
+++ b/source/less/blocks/tariff.less
@@ -1,24 +1,33 @@
 .tariff {
   background-color: @verylightgray;
+  background: linear-gradient(-3deg, #f2f2f2 90%, #ffffff 8%);
   text-transform: uppercase;
   overflow-x: hidden;
 
   @media (min-width: @tablet-width) {
     overflow-x: visible;
+    background: linear-gradient(-2deg, #f2f2f2 90%, #ffffff 8%);
+  }
+
+  @media (min-width: @desktop-width) {
+    background: linear-gradient(-2deg, #f2f2f2 86%, #ffffff 8%);
   }
 }
 
 .tariff__wrapper {
   width: 280px;
   margin: 0 auto;
+  padding-top: 100px;
 
   .tariff__list {
     position: relative;
     left: -560px;
     border-collapse: collapse;
+    margin-top: 90px;
 
     @media (min-width: @tablet-width) {
       position: static;
+      margin: 0;
     }
 
     td {
@@ -26,6 +35,7 @@
       border: 2px solid #E5E5E5;
       border-radius: 1px 0px 0px 0px;
       text-align: right;
+      background-color: @white;
 
       @media (min-width: @tablet-width) {
         text-align: center;
@@ -127,6 +137,10 @@
     position: relative;
   }
 
+  .reviews__toggles {
+    margin: 50px 0;
+  }
+
   @media (min-width: @tablet-width) {
     width: 620px;
 
@@ -157,6 +171,11 @@
     .cell .table-text {
       padding-left: 15px;
       text-transform: none;
+    }
+
+    .reviews__toggles {
+      margin: 0;
+      padding: 35px 0;
     }
   }
 
@@ -202,6 +221,10 @@
       font-weight: normal;
       font-size: 18px;
       line-height: 30px;
+    }
+
+    .reviews__toggles {
+      padding: 45px 0;
     }
   }
 }
